# 3FA-desktop.rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml
examples/: gen_fixture.rs
nix/: devshell.nix
scripts/release/: INSTALL-README.txt  README.md  package.sh  publish.mjs
scripts/release/installers/: 3fa.desktop  install-linux.sh  install-macos.sh  install.ps1
src/: config.rs  lib.rs  main.rs  pin_session.rs  protocol.rs  session.rs  ui.rs
src/auth/: mod.rs  passcode.rs  passkey.rs  voice.rs
src/auth/biometric/: linux.rs  macos.rs  windows.rs
src/crypto/: mod.rs
src/otp/: mod.rs  uri.rs
src/qr/: mod.rs
src/sync/: http.rs  mod.rs  supabase.rs
src/vault/: mod.rs
tests/: cross_compat.rs
ui/: app.slint
